Wrong linebox height, when block element parent has vertical-align property defined. https://bugs.webkit.org/show_bug.cgi?id=118245

Patch by Zalan Bujtas <zalan@apple.com> on 2013-07-17
Reviewed by David Hyatt.

Do not push the current element to the next, when it is still considered empty, even with
some object(s) in front. Behave as if it was actually empty.
Inline elements like <span></span> generate such lines.

Source/WebCore:

Test: fast/css/empty-span-with-parent-div-and-vertical-align.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::LineBreaker::nextSegmentBreak):

LayoutTests:

* fast/css/empty-span-with-parent-div-and-vertical-align-expected.html: Added.
* fast/css/empty-span-with-parent-div-and-vertical-align.html: Added.
* platform/mac/fast/lists/inlineBoxWrapperNullCheck-expected.png: Rebased.
* platform/mac/fast/lists/inlineBoxWrapperNullCheck-expected.txt: Rebased.
* platform/mac/tables/mozilla/marvin/backgr_index-expected.png: Rebased.
* platform/mac/tables/mozilla/marvin/backgr_index-expected.txt: Rebased.

Canonical link: https://commits.webkit.org/136672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152793 268f45cc-cd09-0410-ab3c-d52691b4dbfc